crates/math-core/tests/snapshots/error_test__invalid_sup.snap
---
source: crates/math-core/tests/error_test.rs
expression: x^^
---
Error: '^' or '_' directly followed by '^', '_' or prime.
   ╭─[ <input>:1:3 ]
   │
 1 │ x^^
   │   ┬  
   │   ╰── unexpected bound
───╯
